Fixed alignment that was screwed up in last commit (my bad, stupid quickfix that broke stuff)

--- a/trunk/foodle-x9/WebContent/style/venue.css
+++ b/trunk/foodle-x9/WebContent/style/venue.css
@@ -36,7 +36,7 @@
 	margin-top: 2px;
 	margin-bottom: 5px;
 	position: relative;
-	height: 36px;
+	height: 40px;
 	background: url(../images/venue-title-bg.png) repeat;
 	-moz-border-radius-topleft: 10px;
 	-moz-border-radius-bottomleft: 10px;
@@ -53,11 +53,12 @@
 	top: 0px;
 	left: 5px;
 	width: 85%;
+	text-align: left;
 }
 
 .venue #venue_edit {
 	position: absolute;
-	top: 9px;
+	top: 11px;
 	right: 5px;
 	opacity: 1 !important;
 	background: url(../images/edit.png) no-repeat !important;
